--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^4.13.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "string-strip-html": "^13.0.6",
+    "uuid": "^9.0.0"
   }
 }
